# clip-weave

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml
docs/: ai-marketing-video-solution.md  architecture.md  tech-selection.md
docs/superpowers/plans/: 2026-07-20-clip-weave-phase1-2a.md
docs/superpowers/specs/: 2026-07-20-clip-weave-design.md
scripts/: test_api_connectivity.py
src/clip_weave/: __main__.py  config.py  pipeline.py
src/clip_weave/adapters/: hyperframes.py  video_analyzer.py  videoagent.py
src/clip_weave/core/: asset_resolver.py  html_generator.py
src/clip_weave/schemas/: brand_assets.py  shots.py
tests/: conftest.py  test_asset_resolver.py  test_cli.py  test_config.py  test_e2e.py  test_html_generator.py  test_hyperframes_adapter.py  test_pipeline.py  test_schemas.py  test_video_analyzer.py  test_videoagent_adapter.py
tests/fixtures/: brand_assets.json  make_test_video.py  shots.json
vendors/VideoAgent/: README.md
vendors/hyperframes/: README.md
