[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clip-weave"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.50",
    "anthropic>=0.40",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["src/clip_weave"]
